# rithm

./: .azure-pipelines.yml  .bumpversion.cfg  .coveragerc  .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  MANIFEST.in  README.md  docker-compose.cpython.yml  docker-compose.pypy.yml  pyproject.toml  requirements-setup.txt  requirements-tests.txt  requirements.txt  run-tests.ps1  run-tests.sh  setup.py
.github/workflows/: ci.yml
rithm/: __init__.py  __init__.pyi  _enums.py  _hints.py  _rithm.py  enums.py  enums.pyi  fraction.py  fraction.pyi  integer.py  integer.pyi
src/: big_int.rs  constants.rs  contracts.rs  digits.rs  fraction.rs  lib.rs  traits.rs  utils.rs
src/big_int/: abs.rs  add.rs  add_assign.rs  bit_and.rs  bit_and_assign.rs  bit_length.rs  bit_or.rs  bit_or_assign.rs  bit_xor.rs  bit_xor_assign.rs  checked_div.rs  checked_div_as_f32.rs  checked_div_as_f64.rs  checked_div_euclid.rs  checked_div_rem.rs  checked_div_rem_euclid.rs  checked_pow.rs  checked_pow_rem_euclid.rs  checked_rem.rs  checked_rem_euclid.rs  checked_rem_euclid_inv.rs  checked_shl.rs  checked_shr.rs  constants.rs  contracts.rs  digits.rs  display.rs  div.rs  div_assign.rs  div_euclid.rs  div_rem.rs  div_rem_euclid.rs  float_to_int.rs  from.rs  from_bytes.rs  from_str_radix.rs  gcd.rs  hash.rs  is_power_of_two.rs  mod.rs  (+30 more)
src/fraction/: abs.rs  add.rs  add_assign.rs  ceil.rs  checked_div.rs  checked_div_euclid.rs  checked_div_rem_euclid.rs  checked_pow.rs  checked_rem.rs  checked_rem_euclid.rs  debug.rs  display.rs  div.rs  div_assign.rs  div_euclid.rs  eq.rs  floor.rs  from.rs  hash.rs  mod.rs  mul.rs  mul_assign.rs  neg.rs  one.rs  oppositive.rs  ord.rs  partial_eq.rs  partial_ord.rs  pow.rs  rem.rs  rem_assign.rs  rem_euclid.rs  round.rs  signed.rs  sub.rs  sub_assign.rs  trunc.rs  try_from.rs  try_into.rs  types.rs  (+3 more)
src/python_binding/: mod.rs  py_big_int.rs  py_endianness.rs  py_fraction.rs  py_int.rs  py_tie_breaking.rs  utils.rs
tests/: conftest.py  meta_utils.py  utils.py
tests/int_tests/: strategies.py  (+66 more)
(+197 files in other folders)
