[package]
name = "rithm"
description = "Arbitrary precision arithmetic."
license = "MIT"
repository = "https://github.com/lycantropos/rithm"
rust-version = "1.67"
version = "14.6.0"
edition = "2018"

[lib]
name = "rithm"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "^0.23.1"
features = ["extension-module"]
optional = true

[dependencies.pyo3-ffi]
version = "^0.23.1"
features = ["extension-module"]
optional = true

[dependencies.traiter]
version = "^4.0.0"
features = ["numbers", "std"]

[build-dependencies]
pyo3-build-config = "^0.23.1"

[features]
python_binding = ["dep:pyo3", "dep:pyo3-ffi"]
