[package]
description = "Arbitrary precision arithmetic."
edition = "2018"
license = "MIT"
name = "rithm"
repository = "https://github.com/lycantropos/rithm"
rust-version = "1.74.0"
version = "14.7.0"

[lib]
name = "rithm"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "^0.27.2"
features = ["extension-module"]
optional = true

[dependencies.pyo3-ffi]
version = "^0.27.2"
features = ["extension-module"]
optional = true

[dependencies.traiter]
version = "^4.0.0"
features = ["numbers", "std"]

[build-dependencies]
pyo3-build-config = "^0.27.2"

[features]
python_binding = ["dep:pyo3", "dep:pyo3-ffi"]
