[package]
description = "Arbitrary precision arithmetic."
edition = "2018"
license = "MIT"
name = "rithm"
repository = "https://github.com/lycantropos/rithm"
rust-version = "1.74.0"
version = "14.8.0"

[lib]
name = "rithm"
crate-type = ["cdylib", "rlib"]

[dependencies.pyo3]
version = "^0.28.3"
features = ["extension-module"]
optional = true

[dependencies.pyo3-ffi]
version = "^0.28.3"
features = ["extension-module"]
optional = true

[dependencies.traiter]
version = "^4.0.0"
features = ["numbers", "std"]

[build-dependencies]
pyo3-build-config = "^0.28.3"

[features]
python_binding = ["dep:pyo3", "dep:pyo3-ffi"]

[lints.rust]
warnings = "deny"
